[package]
name = "async_futures-timer"
version = "3.0.3"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Endericedragon/async_futures-timer"
homepage = "https://github.com/async-rs/futures-timer"
documentation = "https://docs.rs/futures-timer"
description = """
Timeouts for futures.
"""

[dependencies]
async_std = { path = "../../modules/async_std", features = ["irq", "multitask", "alloc", "fs"] }
